# analisis_bursatil_demo

./: .gitignore  CLAUDE.md  README.md  SPEC.md
.claude/commands/: add-backtest-feature.md  add-candle-pattern.md  add-chart-feature.md  add-demo-feature.md  (+8 more)
backend/: .env.example  .gitignore  pyproject.toml  seed.py
backend/app/: config.py  database.py  main.py
backend/app/data/: screener_info_seed.json
backend/app/models/: __init__.py  backtest_portfolio_run.py  backtest_run.py  backtest_trade.py  conversation.py  course.py  document.py  indicator_preset.py  lesson_response.py  message.py  order.py  portfolio.py  strategy.py  user.py
backend/app/routers/: auth.py  backtest.py  demo.py  indicators.py  lesson.py  market.py  tutor.py
backend/app/schemas/: __init__.py  auth.py  backtest.py  common.py  course.py  demo.py  indicators.py  lesson.py  market.py  tutor.py
backend/app/services/: backtest_service.py  demo_service.py  indicator_service.py  market_service.py  storage.py  tutor_service.py
backend/app/utils/: auth.py  pdf_processor.py
backend/tests/: conftest.py  test_backtest_service.py  test_demo_service.py  test_routes.py
deploy/: DEPLOY.md  setup.sh
frontend/: index.html  package-lock.json  package.json
mejoras/: CorrelationHeatmap.tsx  CorrelationPanel.tsx  PLAN_IMPLEMENTACION.md  correlationInterpretation.ts  correlation_service.py  market_correlation.py  market_correlation_route.py  test_correlation.py  useCorrelation.ts
skills/: README.md  add-strategy-template.md  fix-ui.md  make-responsive.md  setup-supabase.md
uploads/: chunks.json
(+55 files in other folders)
