[project]
name = "analisis-bursatil-backend"
version = "0.1.0"
description = "Plataforma de Análisis Bursátil Educativa - Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "yfinance>=0.2",
    "langchain>=0.2",
    "faiss-cpu>=1.7",
    "sentence-transformers>=2.0",
    "pdfplumber>=0.10",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"
